jmn-tabs to set default tabs and tab font-face

--- a/emacs.org
+++ b/emacs.org
@@ -123,36 +123,6 @@ Save backups in =.emacs.d=.
         '( ("." . "~/.emacs.d/filebackups")))
 #+end_src
 
-*** Recentf
-Recentf is needed for recent files on the dashboard.
-#+begin_src emacs-lisp
-  (recentf-mode 1) ;; needed for recent files in dashboard
-  (setq recentf-max-menu-items 25) ;; max number of entries
-  (run-at-time nil (* 5 60) 'recentf-save-list) ;; save recent files periodically
-
-  ;; Exclude the following files from the recents list
-  (add-to-list 'recentf-exclude "~/.emacs.d/recentf")
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "inbox.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "next.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "whip.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "someday.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "journal.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "habits.org"))
-  (add-to-list 'recentf-exclude
-               (concat (file-name-directory jmn-config-location) "emacs.html"))
-
-  (if jmn-pure
-      (progn
-        ;; display recent files on startup
-        ;; (add-hook 'after-init-hook (lambda () (recentf-open-files)))
-        ;; display projects.org on startup
-        (add-hook 'after-init-hook
-                  (lambda () (find-file
-                              (concat jmn-gtd-directory "projects.org"))))
-        ;; make display recent files the dashboard command
-        (global-set-key (kbd "C-c d") 'recentf-open-files)))
-#+end_src
-
 *** Transparency
 Set transparency
 #+begin_src emacs-lisp
@@ -162,21 +132,6 @@ Set transparency
     (if (version<= "29" emacs-version)
         (set-frame-parameter nil 'alpha-background value)
       (set-frame-parameter (selected-frame) 'alpha value)))
-#+end_src
-
-*** Tabs
-#+begin_src emacs-lisp
-  (if (version<= "27" emacs-version)
-      (progn
-        (setq tab-bar-close-button-show nil        ; remove close button
-              tab-bar-show 1                       ; only show tab bar if #tabs>1
-              tab-bar-select-tab-modifiers '(meta) ; Alt-1 switch to the tab numbered i
-              tab-bar-tab-hints t)                 ; show a number on each tabs
-        (tab-bar-mode 1)
-        (if nil                                    ; create named tabs at start up?
-            (dolist (name '("org" "code" "term"))
-              (tab-bar-new-tab)
-              (tab-bar-rename-tab name)))))
 #+end_src
 
 *** Scrolling
@@ -248,40 +203,6 @@ Archive: melpa
       :defer 4
       :hook ((text-mode . ws-butler-mode)
              (prog-mode . ws-butler-mode)))
-#+end_src
-
-*** Dashboard
-Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/emacs-dashboard][github link]]
-- For the icons to display correctly, I needed  to execute =all-of-the-icons-install-fonts=.
-
-#+begin_src emacs-lisp
-  (use-package dashboard
-    :ensure t
-    :init     (dashboard-setup-startup-hook)
-    :bind ( "C-c d" . dashboard-open)
-    :config
-    (setq dashboard-startup-banner 2)  ;; (nil . no-banner)  ([1-5] . plain-text banners)
-    (setq dashboard-center-content 1)
-    (setq dashboard-show-shortcuts 1)  ;; show the single-character shortcuts
-    (setq dashboard-items '((recents  . 5)
-                            (bookmarks . 5)
-                            (projects . 5)
-                            (agenda . 5)
-                            (registers . 5)))
-
-    (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
-    (setq dashboard-set-heading-icons t)
-    (setq dashboard-set-file-icons t)
-    (setq dashboard-projects-backend 'project-el)
-    (dashboard-modify-heading-icons '((recents . "file-text")))
-    (setq dashboard-set-footer nil))
-
-  (defun my-dashboard-hook()
-    "Needed to define these after hook for some reason"
-    (define-key dashboard-mode-map (kbd "n")  'dashboard-next-line)
-    (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
-
-  (add-hook 'dashboard-mode-hook 'my-dashboard-hook)
 #+end_src
 
 ** Keybindings
@@ -616,10 +537,15 @@ Archive: melpa
 [[https://magit.vc/][Magit Documentation]] Archive: melpa
 #+begin_src emacs-lisp
   (use-package magit
-    :commands (magit-status)
-    :custom
-    ;display Magit status buffer in the same buffer rather than splitting it.
-    (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+    :commands (magit-status))
+    ;; :custom
+    ;; ;;display status buffer in the same buffer rather than splitting it.
+    ;; (magit-display-buffer-function
+    ;;    #'magit-display-buffer-same-window-except-diff-v1))
+
+
+  ;; here incase magit installed on a pure machine ;; replace original keybinding?
+  (add-hook 'magit-status-mode-hook (lambda () (define-key magit-mode-map (kbd "C-<tab>") nil)))
 #+end_src
 
 ** Git-Gutter
@@ -1252,7 +1178,6 @@ Create a function to align the size of displayed latex framents with overall org
   (global-set-key (kbd "C-c s") #'org-store-link)
   (global-set-key (kbd "C-c i") #'org-insert-link)
   (global-set-key (kbd "C-c c") #'org-capture)
-  (global-set-key (kbd "C-c a") (lambda (&optional args) (interactive "P") (org-agenda args " ")))
 #+end_src
 
 ** HTML
@@ -1303,25 +1228,6 @@ Make the setup file safe for non-pure machines.
         (add-to-list 'org-safe-remote-resources  "\\`https://fniessen\\.github\\.io/org-html-themes/org/theme-readtheorg\\.setup\\'")))
 #+end_src
 * Agenda and GTD
-** Keybindings
-- =C-c C-s=      :   scheduled timestamp
-- =C-c C-d=      :   deadline timestamp
-- =C-c C-w=      :   refile actionable/project items from inbox to appropriate area.
-- =C-x C-s=      :   org-save-all-org-buffers
-- =C-c C-x e=  :   org-set-effort
-- =o=               :   open  agenda item in other window --after my change
-- =+=, =-= ,  =,=         :   increase, decrease, and set priority
-- =Shift-right=  :  advance the todo state
-- =S-<down>=   :         org-agenda-priority-down
-- =S-<left>=   :      org-agenda-do-date-earlier
-- =S-<right>= :       org-agenda-do-date-later
-- =S-<up>=         :      org-agenda-priority-up
-
-#+begin_src emacs-lisp
-  (with-eval-after-load 'org-agenda
-    (define-key org-agenda-keymap (kbd "o") 'org-agenda-goto)) ;; more like dired
-#+end_src
-
 ** General
 Following the tutorial [[https://emacs.cafe/emacs/orgmode/gtd/2017/06/30/orgmode-gtd.html][here]].
 #+begin_src emacs-lisp
@@ -1521,6 +1427,29 @@ https://github.com/jethrokuan/.emacs.d/blob/master/init.el
   ;; ;;             :after (func-ignore #'org-agenda-redo-all))
 #+end_src
 
+** Keybindings
+- =C-c C-s=      :   scheduled timestamp
+- =C-c C-d=      :   deadline timestamp
+- =C-c C-w=      :   refile actionable/project items from inbox to appropriate area.
+- =C-x C-s=      :   org-save-all-org-buffers
+- =C-c C-x e=  :   org-set-effort
+- =o=               :   open  agenda item in other window --after my change
+- =+=, =-= ,  =,=         :   increase, decrease, and set priority
+- =Shift-right=  :  advance the todo state
+- =S-<down>=   :         org-agenda-priority-down
+- =S-<left>=   :      org-agenda-do-date-earlier
+- =S-<right>= :       org-agenda-do-date-later
+- =S-<up>=         :      org-agenda-priority-up
+
+#+begin_src emacs-lisp
+  (defun jmn-agenda (&optional arg) (interactive "P") (org-agenda arg " "))
+
+  (global-set-key (kbd "C-c a") 'jmn-agenda)
+
+  (with-eval-after-load 'org-agenda
+    (define-key org-agenda-keymap (kbd "o") 'org-agenda-goto)) ;; more like dired
+#+end_src
+
 * Terminals
 ** term-mode
 - Slower than vterm at printing large amounts of information.
@@ -1570,16 +1499,17 @@ Need to install: cmake, libtool
                             (libtool . "sudo dnf install -y libtool" )) ;; compilation
     :defer t
     :bind (:map vterm-mode-map ("C-o" . other-window))
+    :config
+    (dolist (num '("1" "2" "3" "4" "5" "6" "7" "8" "9"))
+      (define-key vterm-mode-map (kbd (concat "M-" num)) nil))
+    (setq vterm-max-scrollback 10000)
     :init (let ((package "cmake"))
              (unless (executable-find package)
                (async-shell-command (concat "sudo dnf install -y " package))))
            (let ((package "libtool"))
              (unless (executable-find package)
-               (async-shell-command (concat "sudo dnf install -y " package))))
-    :config
-    ;;(setq term-prompt-regexp "^[^$]*[$] *");; match your custom shell
-    ;;(setq vterm-shell "zsh");; Set this to customize the shell to launch
-    (setq vterm-max-scrollback 10000))
+               (async-shell-command (concat "sudo dnf install -y " package)))))
+
 
   (use-package vterm-toggle
     :after vterm
@@ -1733,7 +1663,14 @@ Helpful functions
   (defun jmn-load-pure-dark-theme()
     (load-theme 'wombat)
     (with-eval-after-load 'org
-      (set-face-background 'org-block "gray8")))
+      (set-face-background 'org-block "gray8"))
+    (with-eval-after-load 'tab-bar
+      (dolist (face '(tab-bar tab-bar-tab tab-bar-tab-inactive))
+        (set-face-attribute  face nil
+                             :foreground (face-foreground 'default)
+                             :background (face-background 'default)
+                             :weight 'regular))
+      (set-face-background 'tab-bar-tab "gray25")))
 
   (defun jmn-load-pure-light-theme()
     (with-eval-after-load 'org
@@ -1824,5 +1761,105 @@ source: https://github.com/syl20bnr/spacemacs/issues/7262
                 (lambda ()(set-face-background 'default "unspecified-bg" (selected-frame)))))
 #+end_src
 
+* Startup and Tabs
+** Recentf
+Recentf is needed for recent files on the dashboard.
+#+begin_src emacs-lisp
+  (recentf-mode 1) ;; needed for recent files in dashboard
+  (setq recentf-max-menu-items 25) ;; max number of entries
+  (run-at-time nil (* 5 60) 'recentf-save-list) ;; save recent files periodically
+
+  ;; Exclude the following files from the recents list
+  (add-to-list 'recentf-exclude "~/.emacs.d/recentf")
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "inbox.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "next.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "whip.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "someday.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "journal.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "habits.org"))
+  (add-to-list 'recentf-exclude
+               (concat (file-name-directory jmn-config-location) "emacs.html"))
+
+  (if jmn-pure
+      (progn
+        ;; display recent files on startup
+        ;; (add-hook 'after-init-hook (lambda () (recentf-open-files)))
+        ;; display projects.org on startup
+        (add-hook 'after-init-hook
+                  (lambda () (find-file
+                              (concat jmn-gtd-directory "projects.org"))))
+        ;; make display recent files the dashboard command
+        (global-set-key (kbd "C-c d") 'recentf-open-files)))
+#+end_src
+
+** Tabs
+#+begin_src emacs-lisp
+  (if (version<= "27" emacs-version)
+      (progn
+        (setq tab-bar-close-button-show nil        ; remove close button
+              tab-bar-show 1                       ; only show tab bar if #tabs>1
+              tab-bar-select-tab-modifiers '(meta) ; Alt-1 switch to the tab numbered i
+              tab-bar-tab-hints t)                 ; show a number on each tabs
+
+        (tab-bar-mode 1)))
+
+  (defun jmn-tabs()
+    "Create my tabs"
+    (interactive)
+    ;; (dolist (name '("org" "code" "term"))
+    ;;   (tab-bar-new-tab)
+    ;;   (tab-bar-rename-tab name))
+    (tab-close-other)
+    (tab-bar-rename-tab "config")
+    (find-file jmn-config-location)
+    (magit-status)
+
+    (tab-bar-new-tab)
+    (tab-bar-rename-tab "org")
+    (find-file (concat jmn-gtd-directory "projects.org"))
+    (jmn-agenda)
+
+    (tab-bar-new-tab)
+    (tab-bar-rename-tab "term")
+    (if jmn-pure
+        (term "/bin/bash")
+      (vterm))
+
+    (tab-switch "org"))
+#+end_src
+
+** Dashboard
+Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/emacs-dashboard][github link]]
+- For the icons to display correctly, I needed  to execute =all-of-the-icons-install-fonts=.
+
+#+begin_src emacs-lisp
+  (use-package dashboard
+    :ensure t
+    :init     (dashboard-setup-startup-hook)
+    :bind ( "C-c d" . dashboard-open)
+    :config
+    (setq dashboard-startup-banner 2)  ;; (nil . no-banner)  ([1-5] . plain-text banners)
+    (setq dashboard-center-content 1)
+    (setq dashboard-show-shortcuts 1)  ;; show the single-character shortcuts
+    (setq dashboard-items '((recents  . 5)
+                            (bookmarks . 5)
+                            (projects . 5)
+                            (agenda . 5)
+                            (registers . 5)))
+
+    (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
+    (setq dashboard-set-heading-icons t)
+    (setq dashboard-set-file-icons t)
+    (setq dashboard-projects-backend 'project-el)
+    (dashboard-modify-heading-icons '((recents . "file-text")))
+    (setq dashboard-set-footer nil))
+
+  (defun my-dashboard-hook()
+    "Needed to define these after hook for some reason"
+    (define-key dashboard-mode-map (kbd "n")  'dashboard-next-line)
+    (define-key dashboard-mode-map (kbd "p")  'dashboard-previous-line))
+
+  (add-hook 'dashboard-mode-hook 'my-dashboard-hook)
+#+end_src
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui Grammarly workspaces commenter Pyright CMake Flyspell Pyvenv treemacs shellcheck Linum Proced Hacky GTD
