--- a/emacs.org
+++ b/emacs.org
@@ -491,6 +491,15 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
               'jmn-vscode-current-buffer-file-at-point)
 #+end_src
 
+*** jmn-remove-M-1-9-from-mode-map
+Clear up to allow the tab-bar keybindings.
+#+begin_src emacs-lisp
+  (defun jmn-remove-M-1-9-from-mode-map (modemap)
+    "remove 'M-[d]' keybinding from a mode-map"
+    (dolist (num '("1" "2" "3" "4" "5" "6" "7" "8" "9"))
+      (define-key modemap (kbd (concat "M-" num)) nil)))
+#+end_src
+
 * General Development
 ** Indentation
 Guess the indentation offset and 'indent-tabs-mode' from the file using internal heuristics.
@@ -536,16 +545,18 @@ Archive: melpa
 ** Magit
 [[https://magit.vc/][Magit Documentation]] Archive: melpa
 #+begin_src emacs-lisp
-  (use-package magit
-    :commands (magit-status))
-    ;; :custom
-    ;; ;;display status buffer in the same buffer rather than splitting it.
-    ;; (magit-display-buffer-function
-    ;;    #'magit-display-buffer-same-window-except-diff-v1))
+    (use-package magit
+      :commands (magit-status))
+      ;; :custom
+      ;; (magit-display-buffer-function
+      ;;    #'magit-display-buffer-same-window-except-diff-v1));;display status buffer
 
 
-  ;; here incase magit installed on a pure machine ;; replace original keybinding?
-  (add-hook 'magit-status-mode-hook (lambda () (define-key magit-mode-map (kbd "C-<tab>") nil)))
+    ;; moved here incase magit installed on a pure machine ;; replace original keybinding?
+    (with-eval-after-load 'magit
+      (add-hook 'magit-status-mode-hook
+                (lambda () (define-key magit-mode-map (kbd "C-<tab>") nil)))
+      (jmn-remove-M-1-9-from-mode-map magit-mode-map))
 #+end_src
 
 ** Git-Gutter
@@ -1500,8 +1511,7 @@ Need to install: cmake, libtool
     :defer t
     :bind (:map vterm-mode-map ("C-o" . other-window))
     :config
-    (dolist (num '("1" "2" "3" "4" "5" "6" "7" "8" "9"))
-      (define-key vterm-mode-map (kbd (concat "M-" num)) nil))
+    (jmn-remove-M-1-9-from-mode-map vterm-mode-map)
     (setq vterm-max-scrollback 10000)
     :init (let ((package "cmake"))
              (unless (executable-find package)
@@ -1808,23 +1818,22 @@ Recentf is needed for recent files on the dashboard.
               tab-bar-select-tab-modifiers '(meta) ; Alt-1 switch to the tab numbered i
               tab-bar-tab-hints t)                 ; show a number on each tabs
 
-        (tab-bar-mode 1)))
+        (tab-bar-mode 1)
+        (tab-bar-close-other-tabs))) ; ensures (tab-bar-mode 1) works on older systems
 
-  (defun jmn-tabs()
-    "Create my tabs"
+
+  (defun jmn-create-my-tabs()
+    "Create my default tabs"
     (interactive)
-    ;; (dolist (name '("org" "code" "term"))
-    ;;   (tab-bar-new-tab)
-    ;;   (tab-bar-rename-tab name))
     (tab-close-other)
-    (tab-bar-rename-tab "config")
-    (find-file jmn-config-location)
-    (magit-status)
-
-    (tab-bar-new-tab)
+    (delete-other-windows)
     (tab-bar-rename-tab "org")
     (find-file (concat jmn-gtd-directory "projects.org"))
     (jmn-agenda)
+
+    (tab-bar-new-tab)
+    (tab-bar-rename-tab "workspace")
+    (switch-to-buffer "projects.org")
 
     (tab-bar-new-tab)
     (tab-bar-rename-tab "term")
@@ -1832,7 +1841,12 @@ Recentf is needed for recent files on the dashboard.
         (term "/bin/bash")
       (vterm))
 
-    (tab-switch "org"))
+    (tab-bar-new-tab)
+    (tab-bar-rename-tab "config")
+    (find-file jmn-config-location)
+    (magit-status)
+
+    (tab-bar-select-tab-by-name "org"))
 #+end_src
 
 ** Dashboard
