--- a/emacs.org
+++ b/emacs.org
@@ -587,7 +587,8 @@ Git-gutter-fringe displays git-gutter in the fringe
     :hook prog-mode
     :config
     (setq highlight-indent-guides-method 'fill)
-    (setq highlight-indent-guides-auto-character-face-perc 50))
+    (setq highlight-indent-guides-auto-odd-face-perc -7)
+    (setq highlight-indent-guides-auto-even-face-perc 7))
 #+end_src
 
 ** Company-Mode
@@ -630,15 +631,31 @@ Help in sorting the completion results.
 #+end_src
 
 ** Eglot
-#+begin_src emacs-lisp
-  (use-package eglot
-    :defer t
-    :ensure-system-package
-    ((bash-language-server . "sudo dnf install -y nodejs-bash-language-server")
-     (pyright . "pip install pyright")
-     (clangd . "clang-tools-extra")))
+Function/keybinding learning area:
+- eglot
+   - eglot find declaration
+   - eglot find definition
+   - eglot format buffer or region
+   - eglot rename
 
-  (add-hook 'prog-mode-hook 'eglot-ensure)
+- xref
+   - xrf-find-defintions "M-." --return back with "M-,"
+      - [ ] uses tags so replace?
+   - xrf-find-references "M-?"
+
+
+#+begin_src emacs-lisp
+      (use-package eglot
+        :defer 1
+        :ensure-system-package
+        ((bash-language-server . "sudo dnf install -y nodejs-bash-language-server")
+         (pyright . "pip install pyright")
+         (clangd . "sudo dnf install -y clang-tools-extra"))
+        :hook
+        ((sh-mode . eglot-ensure)
+         (python-mode . eglot-ensure)
+         (c-mode . eglot-ensure)
+         (c++-mode . eglot-ensure)))
 #+end_src
 
 ** LSP and DAP (not used)
@@ -714,12 +731,14 @@ Like lsp-mode but for debuggers.
     :commands dap-mode)
 #+end_src
 
-** Flycheck
+** Flycheck (not used) --eglot uses flymake
+:PROPERTIES:
+:header-args:emacs-lisp: :tangle no
+:END:
 Checks the code for bugs on the fly.
 #+begin_src emacs-lisp
   (use-package flycheck
-    :hook ((emacs-lisp-mode . flycheck-mode)
-           (sh-mode))
+    :hook ((emacs-lisp-mode . flycheck-mode))
     :diminish flycheck-mode
     :after lsp)
 #+end_src
@@ -741,12 +760,12 @@ Archive: melpa
     :config (cmake-font-lock-activate))
 #+end_src
 
-*** CMake project
+*** TODO CMake project
 In the source directory containing ~CMakeLists.txt~ run =M-x cmake-project-configure-project=.
 As a preference, use the =/bin/= option to keep the cmake files out of the source directory.
 After this, the =compile= automatically holds the correct command.
 Archive: melpa
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (use-package cmake-project
     :hook ((c++-mode . cmake-project-mode )
            (c-mode . cmake-project-mode)))
@@ -756,12 +775,12 @@ Archive: melpa
 Archive: elpa, melpa
 #+begin_src emacs-lisp
   (use-package yasnippet
-    :after lsp
+    :defer 1
     :config
     (yas-global-mode 1))
 
-  (use-package yasnippet-snippets
-    :after yas-minor-mode) ; load basic snippets from melpa
+    (use-package yasnippet-snippets
+      :after yas-minor-mode) ; load basic snippets from melpa
 #+end_src
 
 ** TODO Flyspell
@@ -875,11 +894,7 @@ Use =C-c '= to view elisp babel blocks in their own file to get completion in co
 - added flycheck-mode-hook in it's use-package config.
 
 ** Bash
-- Flycheck uses shellcheck, which requires ~sudo dnf install -y shellcheck~
 - debuggers are available
-- If language server doesn't install automatically either:
-  1. Fedora:  ~sudo dnf -y nodejs-bash-language-server.noarch~
-  2. =M-x lsp-install-server=
 
 #+begin_src emacs-lisp
   (defun my-sh-mode-hook-fn()
@@ -889,8 +904,6 @@ Use =C-c '= to view elisp babel blocks in their own file to get completion in co
 
   (use-package sh-script
     :defer t
-    :ensure-system-package
-    ((bash-language-server . "sudo dnf install -y nodejs-bash-language-server"))
     :config
     (setq sh-basic-offset 2
           sh-indentation 2)) ;; defaults are 4
@@ -958,17 +971,6 @@ After changing venv all installed packages from venv should be visible for LSP s
 
 *** Python-mode
 For lsp, have pyright installed =pip install pyright=
-
-**** Pyright
-#+begin_src emacs-lisp :tangle no
-  ; npm must be installed on the system.
-    (use-package lsp-pyright
-      :after lsp
-      :hook (python-mode . (lambda ()
-                              (require 'lsp-pyright)
-                              (lsp))))
-#+end_src
-
 **** python-mode
 #+begin_src emacs-lisp
   ;;;; Python-mode ;;;;
@@ -976,7 +978,7 @@ For lsp, have pyright installed =pip install pyright=
     (setq python-shell-completion-native-enable 1)
     (define-key python-mode-map (kbd "C-RET") 'python-shell-send-statement)
     (if (executable-find "ipython")
-        (progn (setq python-shell-interpreter "ipython") ;;only if I have ipython
+        (progn (setq python-shell-interpreter "ipython")
                (setq python-shell-interpreter-args "-i --simple-prompt"))))
 #+end_src
 
@@ -1022,7 +1024,6 @@ The following keeps the compilation buffer if there are warnings or errors, and 
     (setq-default c-basic-offset 2)
 
     (defun my-c-c++-mode-hook-fn ()
-      ;; (local-set-key (kbd "C-<tab>") #'lsp-format-buffer) ;tab comp
       )
 
     (add-hook #'c-mode-hook #'my-c-c++-mode-hook-fn)
@@ -1797,9 +1798,14 @@ Was needed at one point-- keeping just in case it is need in the future.
 ** Transparency in term (=emacs -nw=)
 source: https://github.com/syl20bnr/spacemacs/issues/7262
 #+begin_src emacs-lisp
+  (defun jmn-set-background-unspecified ()
+    "Set background of buffer and line numbers to unspecified"
+    (interactive)
+    (set-face-background 'default "unspecified-bg" (selected-frame))
+    (set-face-background 'line-number "unspecified-bg"))
+
   (if jmn-term
-      (add-hook 'window-setup-hook
-                (lambda ()(set-face-background 'default "unspecified-bg" (selected-frame)))))
+      (add-hook 'window-setup-hook 'jmn-set-background-unspecified))
 #+end_src
 
 * Startup and Tabs
@@ -1839,7 +1845,7 @@ Recentf is needed for recent files on the dashboard.
       (progn
         (setq tab-bar-close-button-show nil        ; remove close button
               tab-bar-show 1                       ; only show tab bar if #tabs>1
-              tab-bar-select-tab-modifiers '(meta) ; Alt-1 switch to the tab numbered i
+              tab-bar-select-tab-modifiers '(meta) ; Alt-i switch to the tab numbered i
               tab-bar-tab-hints t)                 ; show a number on each tabs
 
         (tab-bar-mode 1)
