--- a/emacs.org
+++ b/emacs.org
@@ -842,6 +842,12 @@ Note: not used or tangled
   (add-hook 'shell-mode-hook 'compilation-shell-minor-mode)
 #+end_src
 
+** Devdocs
+#+begin_src emacs-lisp
+    (use-package devdocs
+     :defer 2
+     :bind  ("C-h D" . 'devdocs-lookup))
+#+end_src
 ** Pure Dev Tools
 *** Tab completion
 Gives of tab completion in:
@@ -985,7 +991,9 @@ For lsp, have pyright installed =pip install pyright=
 *** Hook
 #+begin_src emacs-lisp
   (defun my-python-mode-hook-fn ()
-    )
+    (with-eval-after-load 'devdocs
+      (setq-local devdocs-current-docs '("python~3.12"))))
+
 
   (add-hook 'python-mode-hook #'my-python-mode-hook-fn)
 #+end_src
@@ -1023,11 +1031,16 @@ The following keeps the compilation buffer if there are warnings or errors, and 
   #+begin_src emacs-lisp
     (setq-default c-basic-offset 2)
 
-    (defun my-c-c++-mode-hook-fn ()
-      )
+    (defun my-c++-mode-hook-fn ()
+      (with-eval-after-load 'devdocs
+        (setq-local devdocs-current-docs '("cpp"))))
 
-    (add-hook #'c-mode-hook #'my-c-c++-mode-hook-fn)
-    (add-hook #'c++-mode-hook #'my-c-c++-mode-hook-fn)
+    (defun my-c-mode-hook-fn ()
+      (with-eval-after-load 'devdocs
+        (setq-local devdocs-current-docs '("c"))))
+
+    (add-hook #'c-mode-hook #'my-c-mode-hook-fn)
+    (add-hook #'c++-mode-hook #'my-c++-mode-hook-fn)
 #+end_src
 
 ** Octave
