cleanup archive unused sections of emacs.org

--- a/emacs.org
+++ b/emacs.org
@@ -435,26 +435,6 @@ Archive: elpa, melpa
     (setq which-key-idle-delay 0.8))
 #+end_src
 
-** Grammarly (not set up)                                         :noexport:
-There looks to be several packages at the moment. Top two (as of 1/10/22) are installed here without proper hooks.
-*** lsp-grammarly
-Gives warning on startup for login.   [[https://github.com/emacs-grammarly/lsp-grammarly][lsp-grammarly doc]]
-#+begin_src emacs-lisp  :tangle no
-  (use-package lsp-grammarly
-  :ensure t
-  :hook (text-mode . (lambda ()
-                       (require 'lsp-grammarly)
-                       (lsp))))
-#+end_src
-
-*** flycheck-grammarly
-Works w/o being logged in.                         [[https://github.com/emacs-grammarly/flycheck-grammarly][flycheck-grammarly doc]]
-#+begin_src emacs-lisp  :tangle no
-  (use-package flycheck-grammarly
-  :config
-  (setq flycheck-grammarly-check-time 0.8))
-#+end_src
-
 ** Font size
 #+begin_src emacs-lisp
   (defun jmn-set-font-height(value)
@@ -539,7 +519,7 @@ Archive: melpa
     )
 #+end_src
 
-*** Smartparens NOT USED
+*** Smartparens
 Auto-creates closing parenthesis and bar and, smartly, writes it over if it is typed.
 Archive: melpa
 #+begin_src emacs-lisp
@@ -631,6 +611,8 @@ Help in sorting the completion results.
 #+end_src
 
 ** Eglot
+Combines with flymake, company-mode, and xref to make an IDE experience.
+
 Function/keybinding learning area:
 - eglot
    - eglot find declaration
@@ -638,7 +620,7 @@ Function/keybinding learning area:
    - eglot format buffer or region
    - eglot rename
 
-- xref
+- xref (uses eglot for the backend)
    - xrf-find-defintions "M-." --return back with "M-,"
       - [ ] uses tags so replace?
    - xrf-find-references "M-?"
@@ -656,91 +638,6 @@ Function/keybinding learning area:
          (python-mode . eglot-ensure)
          (c-mode . eglot-ensure)
          (c++-mode . eglot-ensure)))
-#+end_src
-
-** LSP and DAP (not used)
-:PROPERTIES:
-:header-args:emacs-lisp: :tangle no
-:END:
-*** lsp-mode
-Provides language backend to company-mode.
-#+begin_src emacs-lisp
-  (use-package lsp-mode
-    :commands (lsp)
-    :hook ((sh-mode . lsp-mode)
-           (python-mode . lsp-mode)
-           (c-mode . lsp-mode)
-           (c++-mode . lsp-mode)
-           (markdown-mode . lsp-mode)
-           (cmake-mode . lsp-mode))
-    :init
-    (setq lsp-keymap-prefix "C-c l") ;; or "C-l"
-    :custom ((lsp-idle-delay 0.5)) ;; 0.5 is the defualt
-    :config
-    (lsp-enable-which-key-integration t)
-    ;; Annoying stuff (uncomment to turn off)
-    ;; (setq lsp-enable-links nil)
-    ;; (setq lsp-signature-render-documentation nil)
-    (setq lsp-headerline-breadcrumb-enable nil)
-    ;; (setq lsp-ui-doc-enable nil)
-    ;; (setq lsp-completion-enable-additional-text-edit nil)
-
-    ;; `-background-index' requires clangd v8+!
-    (setq lsp-clients-clangd-args '("-j=4" "-background-index" "-log=error"))
-    )
-#+end_src
-The last line concerning =cangd= comes from [[https://www.mortens.dev/blog/emacs-and-the-language-server-protocol/index.html][mortens.dev]].
-
-*** lsp-ui
-Provides additional lsp information to the company-mode box. The mode provides info when hoovered by mouse. [[https://emacs-lsp.github.io/lsp-ui/][lsp-ui documentation]]
-
-*Note:* Functions also display the proceeding C++ function comments as documentation
-#+begin_src emacs-lisp
-  (use-package lsp-ui
-    :after lsp
-    :hook (lsp-mode . lsp-ui-mode)
-    :custom
-    (lsp-ui-doc-position 'bottom))
-#+end_src
-
-*** lsp-ivy
-[[https://github.com/emacs-lsp/lsp-ivy][lsp-ivy]] integrates Ivy with =lsp-mode= to make it easy to search for things by name in your code.  When you run these commands, a prompt will appear in the minibuffer allowing you to type part of the name of a symbol in your code.  Results will be populated in the minibuffer so that you can find what you're looking for and jump to that location in the code upon selecting the result.
-
-Try these commands with =M-x=:
-- =lsp-ivy-workspace-symbol= - Search for a symbol name in the current project workspace
-- =lsp-ivy-global-workspace-symbol= - Search for a symbol name in all active project workspaces.
-
-#+begin_src emacs-lisp
-  (use-package lsp-ivy
-    :after lsp)
-#+end_src
-
-*** lsp-treemacs
-Shows file contents: classes functions etc
-- See lsp-treemacs-references
-#+begin_src emacs-lisp
-  (use-package lsp-treemacs
-    :after lsp)
-#+end_src
-
-*** Dap Debugging
-Like lsp-mode but for debuggers.
-#+begin_src emacs-lisp
-  (use-package dap-mode
-    :after lsp
-    :commands dap-mode)
-#+end_src
-
-** Flycheck (not used) --eglot uses flymake
-:PROPERTIES:
-:header-args:emacs-lisp: :tangle no
-:END:
-Checks the code for bugs on the fly.
-#+begin_src emacs-lisp
-  (use-package flycheck
-    :hook ((emacs-lisp-mode . flycheck-mode))
-    :diminish flycheck-mode
-    :after lsp)
 #+end_src
 
 ** CMake
@@ -971,7 +868,7 @@ The only lack of this is that you need to restart LSP workspace at least once wh
 So the flow should be like this:
 
 =M-x pyvenv-workon <your-venv>=  # or conda environment?
-=M-x lsp-restart-workspace=
+=M-x lsp-restart-workspace= # eglot's corresponding command?
 
 After changing venv all installed packages from venv should be visible for LSP server.
 
@@ -1682,28 +1579,6 @@ Helpful functions
       (jmn-set-gruv-org-faces '((done-color . "Navajowhite3" )
                                 (org-block . "#ebdbb2")))) ;; default "#f9f5d7"
 
-#+end_src
-
-*** Dark+ (not used)
-- The modeline, when un-selected, has the same background as files, making it hard to delineation between vertically split windows.
-#+begin_src emacs-lisp :tangle no
-  (use-package doom-themes
-    :defer t  )
-
-  (defun jmn-load-dark+()
-    "Theme for very light time"
-    (interactive)
-    (disable-theme (car custom-enabled-themes))
-    (load-theme 'doom-dark+ t)
-    (set-face-background 'line-number
-                         (face-attribute 'default :background))
-    ;; default does not change filename settings when modified
-    (set-face-foreground 'doom-modeline-buffer-modified "red")
-    (with-eval-after-load 'org
-             ;; (set-face-foreground 'org-priority (face-foreground font-lock-builtin-face))
-        (setq org-todo-keyword-faces
-              `(("NEXT" .  ,(face-foreground font-lock-function-name-face))
-                ("HOLD" . "dark orange")))))
 #+end_src
 
 ** Pure Themes
