smerge-keep-all functions

--- a/emacs.org
+++ b/emacs.org
@@ -629,7 +629,6 @@ Function/keybinding learning area:
       - [ ] uses tags so replace?
    - xrf-find-references "M-?"
 
-
 #+begin_src emacs-lisp
   (use-package eglot
     :defer 1
@@ -768,6 +767,25 @@ Note: not used or tangled
      :bind  ("C-h D" . 'devdocs-lookup))
 #+end_src
 ** Pure Dev Tools
+*** smerge
+#+begin_src emacs-lisp
+  (defun jmn-smerge-accept-all-lower()
+    "Accept all lower changes below the cursor point"
+    (interactive)
+    (while (not (smerge-next))
+      (smerge-keep-lower)))
+
+  (defun jmn-smerge-accept-all-upper()
+    "Accept all upper changes below the cursor point"
+    (interactive)
+    (while (not (smerge-next))
+      (smerge-keep-upper)))
+
+  (with-eval-after-load 'smerge
+    (define-key smerge-mode-map (kbd "C-c ^ L") 'jmn-smerge-accept-all-lower)
+    (define-key smerge-mode-map (kbd "C-c ^ U") 'jmn-smerge-accept-all-upper))
+#+end_src
+
 *** Tab completion
 Gives of tab completion in:
 - [X] python-mode
