fix jmn-vscode-current-buffer-file-at-point function

--- a/emacs.org
+++ b/emacs.org
@@ -460,7 +460,7 @@ Archive: elpa, melpa
 
 *** jmn-vscode-current-buffer-file-at-point
 #+begin_src emacs-lisp
-  (defun jmn/vscode-current-buffer-file-at-point ()
+  (defun jmn-vscode-current-buffer-file-at-point ()
     (interactive)
     (start-process-shell-command "code"
                                  nil
@@ -1793,11 +1793,11 @@ Recentf is needed for recent files on the dashboard.
     (tab-bar-rename-tab "workspace")
     (switch-to-buffer "projects.org")
 
-    (tab-bar-new-tab)
-    (tab-bar-rename-tab "term")
-    (if jmn-pure
-        (term "/bin/bash")
-      (vterm))
+    ;; (tab-bar-new-tab)
+    ;; (tab-bar-rename-tab "term")
+    ;; (if jmn-pure
+    ;;     (term "/bin/bash")
+    ;;   (vterm))
 
     (tab-bar-new-tab)
     (tab-bar-rename-tab "config")
