update linuxSetupDocs structure

--- a/linuxSetupDocs/emacs_setup.org
+++ b/linuxSetupDocs/emacs_setup.org
@@ -1,9 +1,11 @@
 #+title: Installing Emacs from Source
 
 * Install Script from online
-Use [[file:emacs_install.sh::!/usr/bin/env bash][emacs_install.sh]] sourced from  [[https://discussion.fedoraproject.org/t/installing-emacs-29-1/86732/4][here]].
 
-** IGNORE My Attempt Building Emacs from Source
+** Emacs 29
+Use [[file:scripts/emacs_install.sh::!/usr/bin/env bash][emacs_install.sh]] sourced from  [[https://discussion.fedoraproject.org/t/installing-emacs-29-1/86732/4][here]].
+
+** IGNORE My Attempt Building Emacs 30 from Source
 CLOSED: [2023-10-08 Sun 11:37]
 Updated for emacs 30.0.50 on Fedora 38
 
