--- a/linuxSetupDocs/gnome.org
+++ b/linuxSetupDocs/gnome.org
@@ -62,3 +62,7 @@ documenting extensions
 
 ** Vitals
 Shows system info in top bar
+
+** Tools to hide topbar
+- Hide Top Bar -- currently does not work for gnome 45
+- Just perfection -- using as of now and works great.
